# Heimdoo

./: README.md  build.gradle  build.gradle.kts  gradle.properties  settings.gradle  settings.gradle.kts
.github/: FUNDING.yml
app/: build.gradle  build.gradle.kts  google-services.json  proguard-rules.pro
app/release/: output-metadata.json
app/src/androidTest/java/dev/rohitverma882/heimdoo/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  ExecStrings.cpp  ExecStrings.h  Heimdoo.cpp  Heimdoo.h  Heimdoo_jni.cpp  ScopedLocalRef.h  ScopedUtfChars.h  utils.h
app/src/main/cpp/Linux/: README
app/src/main/cpp/cmake/: FindFseeko.cmake  FindLFS.cmake
app/src/main/cpp/heimdall/: CMakeLists.txt
app/src/main/cpp/heimdall/source/: BeginDumpPacket.h  BridgeManager.cpp  BridgeManager.h  ClosePcScreenAction.cpp  ClosePcScreenAction.h  ControlPacket.h  DetectAction.cpp  DetectAction.h  DownloadPitAction.cpp  DownloadPitAction.h  DumpPartFileTransferPacket.h  DumpPartPitFilePacket.h  DumpResponse.h  EndFileTransferPacket.h  EndModemFileTransferPacket.h  EndPhoneFileTransferPacket.h  FileTransferPacket.h  FlashAction.cpp  FlashAction.h  FlashPartFileTransferPacket.h  FlashPartPitFilePacket.h  Heimdall.h  HelpAction.cpp  HelpAction.h  InboundPacket.h  InfoAction.cpp  InfoAction.h  Interface.cpp  Interface.h  OutboundPacket.h  Packet.h  PitFilePacket.h  PitFileResponse.h  PrintPitAction.cpp  PrintPitAction.h  ReceiveFilePartPacket.h  ResponsePacket.h  SendFilePartPacket.h  SendFilePartResponse.h  SessionSetupPacket.h  (+3 more)
app/src/main/cpp/libpit/: CMakeLists.txt
app/src/main/cpp/libpit/source/: libpit.cpp  libpit.h
app/src/main/java/dev/rohitverma882/heimdoo/: AppIconCache.kt  Constants.kt  FileCacheService.kt  Heimdoo.kt  HeimdooApp.kt  HeimdooResultListener.kt  MainActivity.kt  (+4 more)
app/src/main/res/drawable/: ic_file_present.xml  ic_share.xml
app/src/main/res/layout/: activity_main.xml  dialog_about.xml
app/src/main/res/menu/: menu_main.xml
app/src/main/res/values/: colors.xml  strings.xml  themes.xml
app/src/main/res/values-ar/: strings.xml
app/src/main/res/values-v23/: themes.xml
app/src/main/res/xml/: device_filter.xml  provider_paths.xml
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
(+1 files in other folders)
